# my-first-python-action

./: README.md  action.yaml  pyproject.toml
.github/workflows/: ci.yml  example-workflow.yml
scripts/: .gitignore  action.py  entry.py  setup.py
scripts/tests/: test_greet.py
src/: greet.py  test_greet.py
